--- a/style.css
+++ b/style.css
@@ -242,3 +242,35 @@ margin-left: 39px;
  box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
 }
 
+.form-studentselect {
+ padding: 5px;
+ min-width: 23%;
+ max-width: 40%;
+ height: 31px;
+ border-radius: 4px;
+ border: none;
+ font-family: 'Nunito', sans-serif;
+ font-weight: normal;
+margin-left: 35px;
+ 
+}
+
+.form-startenddate {
+ padding: 5px;
+ min-width: 23%;
+ max-width: 40%;
+ height: 31px;
+ border-radius: 4px;
+ border: none;
+ font-family: 'Nunito', sans-serif;
+ font-weight: normal;
+margin-left: 69px;
+ 
+}
+
+.instructorViewScreen-form {
+  background: rgba(0, 90, 120, 0.7);
+  border: 4px solid rgba(0, 90, 120, 0.9);
+  border-radius: 8px;
+}
+
