--- a/style.css
+++ b/style.css
@@ -242,3 +242,49 @@ margin-left: 39px;
  box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
 }
 
+.reset-button {
+  width: 100px;
+  height: auto;
+  margin-bottom: 10px;
+  margin-left: 1px;
+  border: none;
+  border-radius: 4px;
+  background-size: 500% 100%;
+  background: rgba(6, 41, 61, 1);
+  box-shadow: inset 0 0 0 0 rgba(20, 196, 148, 1);
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+}
+
+.reset-button:hover {
+  box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
+}
+
+.submit-button {
+  width: 100px;
+  height: auto;
+  margin-bottom: 10px;
+  margin-left: 20px;
+  border: none;
+  border-radius: 4px;
+  background-size: 500% 100%;
+  background: rgba(6, 41, 61, 1);
+  box-shadow: inset 0 0 0 0 rgba(20, 196, 148, 1);
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+}
+
+.submit-button:hover {
+  box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
+}
+
