--- a/style.css
+++ b/style.css
@@ -218,6 +218,19 @@ margin-left: 2px;
 margin-left: 39px;
  
 }
+
+.form-input6 {
+ padding: 5px;
+ min-width: 22%;
+ max-width: 40%;
+ height: 20px;
+ border-radius: 4px;
+ border: none;
+ font-family: 'Nunito', sans-serif;
+ font-weight: normal;
+ margin-left: 71px;
+}
+
 .back-button {
  width: 100px;
  height: auto;
