--- a/static/css/style.css
+++ b/static/css/style.css
@@ -323,3 +323,46 @@ margin-left: 39px;
 .search-button:hover {
   box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
 }
+
+table {
+ border-collapse: collapse;
+ width: 100%;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  text-align: center;
+  border: 4px solid rgba(0, 90, 120, 0.9);
+  border-radius: 80px;
+  height: auto;
+}
+th, td {
+ padding: 0.75rem;
+ text-align: left;
+ border: 3px solid #ccc;
+}
+tbody th, tr {
+ background: rgba(0,90,120,0.7);
+}
+th{
+  color:yellow;
+}
+
+.accept-button {
+  width:25%;
+  height: auto;
+  border: none;
+  border-radius: 4px;
+  background-size: 500% 100%;
+  background: rgba(6, 41, 61, 1);
+  box-shadow: inset 0 0 0 0 rgba(20, 196, 148, 1);
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+  color: #fff;
+  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+  font-size: 0.8em;
+}
+
+.accept-button:hover {
+  box-shadow: inset 0 40px 0 0 rgba(20, 196, 148, 1);
+}
