--- a/static/css/style.css
+++ b/static/css/style.css
@@ -230,6 +230,17 @@ margin-left: 39px;
  font-weight: normal;
  margin-left: 71px;
 }
+.form-input7{
+ padding: 5px;
+ min-width: 52%;
+ max-width: 100%;
+ height: 20px;
+ border-radius: 4px;
+ border: none;
+ font-family: 'Nunito', sans-serif;
+ font-weight: normal;
+ margin-left: 75px;
+}
 
 .back-button {
  width: 100px;
